--- a/.classpath
+++ b/.classpath
@@ -12,7 +12,11 @@
 	<classpathentry kind="lib" path="lib/xercesImpl.jar"/>
 	<classpathentry kind="lib" path="lib/xml-apis.jar"/>
 	<classpathentry kind="lib" path="lib/tagsoup-1.2.jar"/>
-	<classpathentry kind="lib" path="lib/joda-time-2.3.jar"/>
+	<classpathentry kind="lib" path="lib/joda-time-2.3.jar">
+		<attributes>
+			<attribute name="javadoc_location" value="jar:platform:/resource/BuildingsExtractor/lib/joda-time-2.3-javadoc.jar!/"/>
+		</attributes>
+	</classpathentry>
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
